--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "togglemenu",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "main": "./dist/togglemenu.min.js",
   "repository": "https://github.com/keverage/togglemenu.git",
   "author": "Kévin Baubet <contact@kevinbaubet.fr>",
   "license": "MIT",
   "dependencies": {
     "jquery": ">=1.7.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-rename": "^1.2.2"
   }
 }
