--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "togglemenu",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "main": "./dist/togglemenu.min.js",
-  "repository": "https://github.com/keverage/togglemenu.git",
+  "repository": "https://github.com/kevinbaubet/togglemenu.git",
   "author": "Kévin Baubet <contact@kevinbaubet.fr>",
   "license": "MIT",
   "dependencies": {
     "jquery": ">=1.7.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.4",
+    "autoprefixer": "^9.2.0",
     "gulp": "^3.9.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^3.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-pixrem": "^1.0.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.3.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "postcss-pxtorem": "^4.0.1"
   },
   "sass": {
@@ -24,7 +24,7 @@
   },
   "autoprefixer": {
     "browsers": [
-      "last 3 versions",
+      "last 2 versions",
       "IE 10"
     ]
   },
