--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "devDependencies": {
     "autoprefixer": "^9.4.7",
     "gulp": "^4.0.0",
-    "gulp-uglify": "^3.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-pixrem": "^1.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
     "postcss-pxtorem": "^4.0.1",
     "pump": "^3.0.0"
   },
@@ -27,7 +27,7 @@
     "outputStyle": "expanded"
   },
   "autoprefixer": {
-    "browsers": [
+    "overrideBrowserslist": [
       "last 2 versions",
       "IE 10"
     ]
@@ -36,9 +36,7 @@
     "replace": true,
     "unitPrecision": 3,
     "propList": [
-      "font-size",
-      "padding*",
-      "margin*"
+      "font-size"
     ]
   }
 }
