--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kevinbaubet/togglemenu",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "main": "./dist/togglemenu.min.js",
   "repository": {
     "type": "git",
@@ -9,29 +9,28 @@
   "author": "Kévin Baubet <contact@kevinbaubet.fr>",
   "license": "MIT",
   "dependencies": {
+    "autopublish": "0.0.8",
     "jquery": ">=1.7.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.4.7",
-    "gulp": "^4.0.0",
-    "gulp-load-plugins": "^1.5.0",
+    "autoprefixer": "^9.6.0",
+    "gulp": "^4.0.2",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-pixrem": "^1.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "postcss-pxtorem": "^4.0.1",
     "pump": "^3.0.0"
   },
   "sass": {
     "outputStyle": "expanded"
   },
-  "autoprefixer": {
-    "overrideBrowserslist": [
-      "last 2 versions",
-      "IE 10"
-    ]
-  },
+  "browserslist": [
+    "last 2 versions",
+    "IE 10"
+  ],
   "pxtorem": {
     "replace": true,
     "unitPrecision": 3,
