--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "Kévin Baubet <contact@kevinbaubet.fr>",
   "license": "MIT",
   "dependencies": {
-    "autopublish": "0.0.8",
     "jquery": ">=1.7.0"
   },
   "devDependencies": {
+    "autopublish": "^0.0.8",
     "autoprefixer": "^9.6.0",
     "gulp": "^4.0.2",
     "gulp-load-plugins": "^1.6.0",
