--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kevinbaubet/togglemenu",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "main": "./dist/togglemenu.min.js",
   "repository": {
     "type": "git",
@@ -9,18 +9,19 @@
   "author": "Kévin Baubet <contact@kevinbaubet.fr>",
   "license": "MIT",
   "dependencies": {
-    "jquery": ">=1.7.0"
+    "jquery": ">=1.7.0",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
-    "autoprefixer": "^9.6.0",
-    "gulp": "^4.0.2",
-    "gulp-load-plugins": "^1.6.0",
+    "autoprefixer": "^9.8.0",
+    "gulp": "^4.0.0",
+    "gulp-load-plugins": "^2.0.3",
     "gulp-pixrem": "^1.0.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.2",
-    "postcss-pxtorem": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.0",
+    "gulp-uglify": "^3.0.0",
+    "postcss-pxtorem": "^5.0.0",
     "pump": "^3.0.0"
   },
   "sass": {
