--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kevinbaubet/togglemenu",
-  "version": "3.0.8",
+  "version": "3.0.9",
   "main": "./dist/togglemenu.min.js",
   "repository": {
     "type": "git",
@@ -9,13 +9,13 @@
   "author": "Kévin Baubet <contact@kevinbaubet.fr>",
   "license": "MIT",
   "dependencies": {
-    "jquery": ">=1.7.0",
-    "yarn": "^1.22.4"
+    "jquery": "^3.6.0",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.0",
+    "autoprefixer": "^9.0.0",
     "gulp": "^4.0.0",
-    "gulp-load-plugins": "^2.0.0",
+    "gulp-load-plugins": "^2.0.7",
     "gulp-pixrem": "^1.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
@@ -28,8 +28,7 @@
     "outputStyle": "expanded"
   },
   "browserslist": [
-    "last 2 versions",
-    "IE 10"
+    "last 2 versions"
   ],
   "pxtorem": {
     "replace": true,
